--- a/app/views/likes/_create.html.erb
+++ b/app/views/likes/_create.html.erb
@@ -1,5 +1,5 @@
 <section>
-  <%= form_with model:@like do |f|%>
+  <%= form_with model:@like,url:"/users/#{@post.author_id}/posts/#{@post.id}/likes" do |f|%>
       <%= f.submit "Like" , data: {disable_with: "Like"}, class: "add-btn like"%>
   <%end%>
 </section>
