--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,8 +13,8 @@
       <h3><%=link_to post.title, user_post_path(@user.id, post), :class => 'post-title'%></h3>
       <p class='showed-card-text'><%= post.text %></p>
       <div class='showed-action'>
-        <p>Comments: <%= post.comments_counter.nil? ? 0 : post.comments_counter %></p>
-        <p>Likes: <%= post.likes_counter.nil? ? 0 : post.likes_counter %></p>
+        <p>Comments: <%= post.comments_count.nil? ? 0 : post.comments_count %></p>
+        <p>Likes: <%= post.likes_count.nil? ? 0 : post.likes_count %></p>
       </div>
     </div>
     <div class='user-comments'>
