--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,8 @@
   <div class='full-post-header'>
     <h3>"<%= @post.title %>" by: <%= User.find(@post.author_id).name %></h3>
     <div class='showed-post-action'>
-      <p>Comments: <%= @post.comments_counter.nil? ? 0 : @post.comments_counter %></p>
-      <p>Likes: <%= @post.likes_counter.nil? ? 0 : @post.likes_counter %></p>
+      <p>Comments: <%= @post.comments_count.nil? ? 0 : @post.comments_count %></p>
+      <p>Likes: <%= @post.likes_count.nil? ? 0 : @post.likes_count %></p>
     </div>
   </div>
  <div class='post-text'> <%= @post.text %></div>
@@ -13,5 +13,5 @@
     <p><%= User.find(comment.author_id).name %>: <%= comment.text %></p>
   <% end %>
       <%= render partial: "likes/create" %>
-    <%= render partial: 'comments/create' %>
+    <%= render partial: "comments/create" %>
 </div>
