--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,5 +24,5 @@
     </div>
   <% end %>
  </div>
- <button class='all-btn '> Pagination</button>
+ <%=link_to 'Pagination', user_posts_path(@user),:class => 'all-btn'%>
  </div>
