Add logout button

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <div>
+<%= render 'shared/logout'%>
 <div class='user-card'>
  <%= image_tag @user.photo, :class => 'user-showed-image', alt: 'User image' %>
  <div class='user-showed-details'>
