--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <div class='post-card'>
+<%= render 'shared/logout'%>
   <div class='full-post-header'>
     <h3>"<%= @post.title %>" by: <%= User.find(@post.author_id).name %></h3>
     <div class='showed-post-action'>
