--- a/app/assets/stylesheets/all_users.css
+++ b/app/assets/stylesheets/all_users.css
@@ -34,3 +34,30 @@
   height: 200px;
   border: 4px solid rgba(0, 0, 0, 0.534);
 }
+
+.new-post {
+  width: 150px;
+  height: 40px;
+  border: none;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  margin: 20px;
+  background-color: rgba(0, 0, 0, 0.534);
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+  margin-left: 6%;
+}
+
+.new-post:hover {
+  background-color: rgba(0, 0, 0, 0.658);
+}
+
+
+.new-post:focus {
+  background-color: rgba(197, 21, 21, 0.658);
+  outline: none;
+}
