--- a/app/assets/stylesheets/sign_up.css
+++ b/app/assets/stylesheets/sign_up.css
@@ -33,3 +33,36 @@
 .actions input {
   border: none;
 }
+
+.radio-btn {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  margin-right: 1rem;
+  justify-items: center;
+}
+
+
+.radio-btn input {
+  width: auto;
+  height: 30px;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+
+.btn-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 2rem;
+  font-size: 1.2rem
+}
+
+.btn-item label {
+  margin-left: 20px;
+}
