--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,11 @@
 </div>
 <div class='user-comments'>
   <% @post.comments.each do |comment| %>
-    <p><%= User.find(comment.author_id).name %>: <%= comment.text %></p>
+    <p><%= User.find(comment.author_id).name %>: <%= comment.text %>
+    <%if can? :manage, comment%>
+     <%=button_to "delete", user_post_comment_path(@post.id, comment.id), method: :delete,  data: {confirm: 'Are You Sure You Want to Delete This Post'}, class: 'log_out'%>
+     <% end %>
+    </p>
   <% end %>
       <%= render partial: "likes/create" %>
     <%= render partial: "comments/create" %>
